--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 downloads/
 m2deps/
+jobs/berlin-clock/builds/
+jobs/berlin-clock/cobertura/
+jobs/berlin-clock/lastStable
+jobs/berlin-clock/lastSuccessful
+jobs/berlin-clock/nextBuildNumber
+jobs/berlin-clock/workspace/
