--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ jobs/maze-explorer/lastStable
 jobs/maze-explorer/lastSuccessful
 jobs/maze-explorer/nextBuildNumber
 jobs/maze-explorer/workspace/
+jobs/maze-explorer/workspace@libs/
